templates/yaml/nginx/nginx-deploy-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
     app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostpath-nginx
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostpath-nginx
        hostPath:
            path: /mnt/k8s/nginx
            type: DirectoryOrCreate
