templates/yaml/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nginx.cuak.es
    secretName: nginx-tls
  rules:
  - host: nginx.cuak.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
             name: nginx
             port:
                number: 80
